[gd_scene load_steps=13 format=3 uid="uid://hbspw0hu400f"]

[ext_resource type="Script" uid="uid://142ycydyovl5" path="res://scenes/enemy/Pathing_enemy/Pathing_enemy.gd" id="1_nev1t"]
[ext_resource type="Texture2D" uid="uid://c5yfh6kythhvw" path="res://assets/enemy/fly1-Sheet.png" id="2_7utl5"]
[ext_resource type="Script" uid="uid://c44mmw8o77ec6" path="res://scenes/objects/util/snap_to_grid.gd" id="3_7utl5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4bs7x"]
atlas = ExtResource("2_7utl5")
region = Rect2(0, 0, 31, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_aetdg"]
atlas = ExtResource("2_7utl5")
region = Rect2(31, 0, 31, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf88f"]
atlas = ExtResource("2_7utl5")
region = Rect2(62, 0, 31, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_4aodd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bs7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aetdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf88f")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nev1t"]
size = Vector2(193, 218)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k7cfs"]
radius = 9.0

[sub_resource type="Animation" id="Animation_arcew"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_pv056"]
resource_name = "fly"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9666667, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -120), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ey0tg"]
_data = {
&"RESET": SubResource("Animation_arcew"),
&"fly": SubResource("Animation_pv056")
}

[node name="Pathing_enemy" type="Node2D"]
texture_filter = 1
script = ExtResource("1_nev1t")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4aodd")
autoplay = "default"
frame_progress = 0.9525345

[node name="vision" type="Area2D" parent="Sprite2D"]

[node name="vision_Collision" type="CollisionShape2D" parent="Sprite2D/vision"]
position = Vector2(1.5, -10)
shape = SubResource("RectangleShape2D_nev1t")

[node name="hitbox" type="Area2D" parent="Sprite2D"]

[node name="hitbox_Collision" type="CollisionShape2D" parent="Sprite2D/hitbox"]
shape = SubResource("CapsuleShape2D_k7cfs")
debug_color = Color(0.9925576, 0, 0.25677583, 0.41960785)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -120)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ey0tg")
}
autoplay = "fly"

[node name="SnapToGrid" type="Node" parent="."]
script = ExtResource("3_7utl5")
metadata/_custom_type_script = "uid://c44mmw8o77ec6"

[connection signal="body_entered" from="Sprite2D/vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Sprite2D/vision" to="." method="_on_vision_body_exited"]
[connection signal="body_shape_exited" from="Sprite2D/vision" to="." method="_on_vision_body_shape_exited"]
[connection signal="body_entered" from="Sprite2D/hitbox" to="." method="_on_hitbox_body_entered"]
